Implements hw_15